# openhare

./: README.md  README.zh-CN.md
.github/workflows/: pages.yml
client/: pubspec.yaml
client/lib/: main.dart
client/lib/l10n/: app_en.arb  app_zh.arb
client/lib/models/: ai.dart  instances.dart  sessions.dart
client/lib/repositories/: objectbox-model.json
client/lib/repositories/ai/: agent.dart
client/lib/repositories/instances/: instances.dart  session_conn.dart
client/lib/repositories/sessions/: sessions.dart
client/lib/repositories/settings/: settings.dart
client/lib/screens/: app.dart
client/lib/screens/instances/: instance_add.dart  instance_tables.dart  instance_update.dart
client/lib/screens/sessions/: session_add.dart  session_body.dart  session_drawer_body.dart  session_drawer_chat.dart  session_drawer_metadata.dart  session_drawer_sql_result.dart  session_operation_bar.dart  session_sql_editor.dart  session_sql_results.dart  session_status.dart  session_tabs.dart  sessions.dart
client/lib/screens/tasks/: task.dart  (+2 more)
client/lib/utils/: fuzzy_match.dart
client/lib/widgets/: chat_list_view.dart  const.dart  data_grid.dart  data_tree.dart  dialog.dart  form.dart  mention_text.dart  menu.dart  sql_highlight.dart  tab_widget.dart  theme.dart
client/test/: mention_text_test.dart  widget_test.dart
docs/: .gitignore
pkg/db_driver/: pubspec.yaml
pkg/db_driver/go_impl/: .gitignore  ffigen.yaml  pubspec.yaml
pkg/db_driver/go_impl/src/: CMakeLists.txt  go.mod  go.sum  go_impl.h  impl.go  mssql.go  mysql.go  oracle.go  pg.go  sqlite.go  stream_bridge.c  stream_bridge.h  vendor-patch.sh
pkg/db_driver/go_impl/src/patches/: go-ora-query-rows-affected.patch  mssql-rows-affected.patch  mysql-rows-affected.patch  sqlite3-driver-changes.patch
pkg/db_driver/rust_impl/: pubspec.yaml
pkg/db_driver/rust_impl/rust/: Cargo.toml
pkg/db_driver/rust_impl/rust/src/: frb_generated.rs
pkg/db_driver/rust_impl/rust/src/api/: db.rs  mod.rs  mysql.rs  sqlite.rs
pkg/sql_parser/: analysis_options.yaml
pkg/sql_parser/lib/: parser.dart
(+79 files in other folders)
